# nikkicho-clip

./: .gitignore  README.md
.claude/: settings.local.json
sys/linux/: Cargo.toml
sys/linux/src/: app.rs  history.rs  main.rs  settings.rs
sys/macos/: Cargo.toml
sys/macos/src/: app.rs  main.rs  monitor.rs  settings.rs
sys/win/: Cargo.toml
sys/win/src/: app.rs  clip_entry.rs  main.rs  settings.rs
